--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,13 @@ edition = "2024"
 
 [dependencies]
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+
+[[bin]]
+name = "main-prod"
+path = "src/main.rs"
+
+# [[bin]]
+# name = "main-test"
+# path = "src/main-test.rs"
+
